--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -19,19 +19,46 @@ label {
   cursor: pointer;
 }
 
-.welcome__illustraton {
+/* || Dashboard page*/
+.dashboard__illustraton {
   padding: 2rem 0rem;
   max-width: 300px;
 }
 
-.welcome__body {
+.dashboard__body {
   padding-top: 1rem;
   padding-bottom: 2rem;
 }
 
+.dashboard__check {
+  color: #f472b6;
+  width: 2rem;
+  height: 2rem;
+}
+
+.dashboard__list {
+  margin: 0;
+  padding-top: 0.5rem;
+  padding-left: 1.5rem;
+  padding-bottom: 0.5rem;
+}
+
+.dashboard__list li + li {
+  margin-top: 0.25rem;
+}
+
+.dashboard__list li::marker {
+  color: #be185d;
+}
+
+.dashboard__list__prefix {
+  color: #6b7280;
+}
+
+/* || Challenge (Writing) page*/
 .writing__body {
-  padding-top: 1rem;
-  padding-bottom: 2rem;
+  padding-top: 0.5rem;
+  padding-bottom: 1rem;
 }
 
 .writing__list {
@@ -62,30 +89,4 @@ label {
   width: 100%;
   margin: 0.5rem 0rem;
   padding: 0.375rem 0.2rem;
-}
-
-.dashboard__check {
-  color: #f472b6;
-  width: 2rem;
-  height: 2rem;
-}
-
-.dashboard__body {
-  padding-top: 1rem;
-  padding-bottom: 2rem;
-}
-
-.dashboard__list {
-  margin: 0;
-  padding-top: 0.5rem;
-  padding-left: 1.5rem;
-  padding-bottom: 0.5rem;
-}
-
-.dashboard__list li::marker {
-  color: #be185d;
-}
-
-.dashboard__list__prefix {
-  color: #6b7280;
 }
